# cmake_test

./: CMakeLists.txt
cmake/: OuterLibConfig.cmake.in
include/: outer.hpp
src/: outer.cpp  outer_impl.hpp
